# v6d

./: .cirrus.yml  .clang-format  .cspell.json  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .pylintrc  CITATION.cff  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  CPPLINT.cfg  Cargo.toml  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE.txt  OWNERS  README.rst  SECURITY.md  _typos.toml  docs.html  genindex.html  go.sum  go.work  go.work.sum  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements-setup.txt  requirements.txt  search.html  searchindex.js  setup.cfg  (+17 more)
benchmark/alloc_test/: CMakeLists.txt  Makefile  README.md  a.out  alloc_test.h  bench_allocator.cc  bench_allocator.cpp
benchmark/blob_test/: CMakeLists.txt  README.md  blob_test.cc
java/core/: .gitignore  CMakeLists.txt  apache-2.0.txt  pom.xml
modules/basic/: CMakeLists.txt  utils.h
modules/basic/ds/: array.h  array.vineyard-mod  arrow-v2.h  arrow-v2.vineyard-mod  arrow.cc  arrow.h  arrow.vineyard-mod  arrow_utils.cc  arrow_utils.h  dataframe.cc  dataframe.h  dataframe.vineyard-mod  hashmap.h  hashmap.vineyard-mod  hashmap_mvcc.h  object_set.h  pair.h  pair.vineyard-mod  perfect_hash_indexer.h  scalar.h  scalar.vineyard-mod  sequence.h  sequence.vineyard-mod  serialization.cc  serialization.h  tensor.cc  tensor.h  tensor.vineyard-mod  tuple.h  tuple.vineyard-mod  types.cc  types.h
modules/basic/stream/: byte_stream.cc  byte_stream.h  byte_stream.vineyard-mod  dataframe_stream.cc  dataframe_stream.h  dataframe_stream.vineyard-mod  fixed_blob_stream.cc  fixed_blob_stream.h  object_stream.h  object_stream.vineyard-mod  parallel_stream.cc  parallel_stream.h  parallel_stream.vineyard-mod  recordbatch_stream.cc  recordbatch_stream.h  recordbatch_stream.vineyard-mod  stream_utils.h
modules/fuse/: CMakeLists.txt  fuse_impl.cc  fuse_impl.h  fused.cc  fused.h  fusenotes.md  fusermount.cc  readme.md
modules/fuse/adaptors/: CMakeLists.txt  adaptor_test.cc  adaptors.cc  adaptors.h  arrow.cc  arrow.h  arrow_ipc.cc  arrow_ipc.h  formats.h  orc.cc  orc.h  parquet.cc  parquet.h
modules/fuse/cache_manager/: manager.h  manager.hpp
modules/fuse/deserializer/: arrow_ipc.h  orc.cc  orc.h
modules/fuse/test/: chunk_buffer_test.cc  conftest.py  fuse_test.cc  fuse_test.py  read_ipc.py  write_ipc.py
modules/fuse/test_scripts/: read_ipc.py
modules/fuse/tests/: conftest.py  fuse_test.py
modules/graph/: CMakeLists.txt  README.rst
modules/graph/fragment/: arrow_fragment.grin.h  arrow_fragment.grin.idea  arrow_fragment.h  arrow_fragment.vineyard-mod  arrow_fragment_base.h  arrow_fragment_builder_impl.h  arrow_fragment_builder_int32_uint32.cc  arrow_fragment_builder_int32_uint64.cc  arrow_fragment_builder_int64_uint32.cc  arrow_fragment_builder_int64_uint64.cc  arrow_fragment_builder_string_uint32.cc  arrow_fragment_builder_string_uint64.cc  arrow_fragment_group.cc  arrow_fragment_group.h  arrow_fragment_impl.h  arrow_fragment_int32.cc  arrow_fragment_int64.cc  arrow_fragment_modifier.h  arrow_fragment_string.cc  fragment_traits.h  gar_fragment_builder.h  gar_fragment_builder_impl.h  gar_fragment_builder_int32.cc  gar_fragment_builder_int64.cc  gar_fragment_builder_string.cc  graph_schema.cc  graph_schema.grin.h  graph_schema.h  property_graph_types.h  property_graph_utils.h  property_graph_utils_impl.h  property_graph_utils_uint32.cc  property_graph_utils_uint64.cc  varint_impl.h
modules/graph/grin/: .gitignore  predefine.h
modules/graph/loader/: arrow_fragment_builder.h  arrow_fragment_loader.cc  arrow_fragment_loader.h  arrow_fragment_loader_impl.h  arrow_fragment_loader_int32.cc  arrow_fragment_loader_int64.cc  arrow_fragment_loader_string.cc  arrow_fragment_writer.h  basic_arrow_fragment_loader.h  basic_e_fragment_loader.h  (+14 more)
modules/hosseinmoein-dataframe/: CMakeLists.txt  CmakeLists.txt  build_hn_df.sh  hosseinmoein_dataframe.cc  hosseinmoein_dataframe.h
modules/io/: .gitignore  CMakeLists.txt  README.rst  setup.cfg.in  setup.py
modules/kv-state-cache/: CMakeLists.txt  README.rst
modules/llm-cache/: CMakeLists.txt  README.md  thread_group.cc  thread_group.h
modules/malloc/: CMakeLists.txt  allocator.cc  allocator.h  arena_allocator.cc  arena_allocator.h  malloc_wrapper.cc  malloc_wrapper.h  mimalloc_allocator.cc  mimalloc_allocator.h
modules/migrate/: CMakeLists.txt  flags.cc  flags.h  object_migration.cc  object_migration.h  protocols.cc  protocols.h  vineyard-migrate-to-local.py  vineyard_copy.cc  vineyard_migrate.cc  vineyard_migrate_stream.cc
modules/msgpack/: CMakeLists.txt  packed_object.cc  packed_object.h  pickle.cc  pickle.h  vbuffer.cc  vbuffer.h
modules/playground/: CMakeLists.txt  playground.cc  register.cc
modules/vllm-kv-cache/: CMakeLists.txt  README.md
packages-java/: CMakeLists.txt  excludes.txt  forward-headers.txt  pom.xml  type-alias-oracles.txt
rust/: Cargo.toml  README.md  deny.toml
rust/vineyard/: Cargo.toml
rust/vineyard-datafusion/: Cargo.toml
rust/vineyard-integration-testing/: Cargo.toml
rust/vineyard-polars/: Cargo.toml
test/: CMakeLists.txt  allocator_test.cc  arena_test.cc  array_test.cc  array_two_clients_test.cc  arrow_data_structure_test.cc  arrow_data_structure_v2_test.cc  auth_test.cc  clear_test.cc  compressor_test.cc  concurrent_id_test.cc  concurrent_lru_spill_test.cc  concurrent_memcpy_test.cc  custom_vector_test.cc  dataframe_test.cc  deep_copy_test.cc  delete_test.cc  distributed_lock_test.cc  etcd_member_test.cc  external_test.cc  fetch_remote_object_test.cc  fuse_cache_manager_test.cc  get_blob_disk_test.cc  get_blob_test.cc  get_object_test.cc  get_wait_test.cc  global_object_test.cc  gpumalloc_test.cu  hashmap_largefile_test.cc  hashmap_mvcc_test.cc  hashmap_test.cc  hosseinmoein_dataframe_test.cc  id_test.cc  invalid_connect_test.cc  io_test.cc  jemalloc_test.cc  json_utils_test.cc  kv_state_cache_benchmark_test.cc  kv_state_cache_multi_test.cc  kv_state_cache_object_test.cc  (+45 more)
test/vineyard-cmake-example/: CMakeLists.txt  example.cc
(+2853 files in other folders)
